// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MediaCard component 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <div
              aria-label="Test"
              class="croppedText"
              title="Test"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Te
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  st
                </span>
              </div>
              <div
                class="whole"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div
            aria-label="Test/Test"
            class="croppedText"
            title="Test/Test"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              Test/
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                Test
              </span>
            </div>
            <div
              class="whole"
            >
              Test/Test
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with MimeTypeIndicator if an error appeared while loading the image 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <div
              aria-label="Test"
              class="croppedText"
              title="Test"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Te
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  st
                </span>
              </div>
              <div
                class="whole"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div
            aria-label="Test/Test"
            class="croppedText"
            title="Test/Test"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              Test/
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                Test
              </span>
            </div>
            <div
              class="whole"
            >
              Test/Test
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <div
        class="mimeTypeIndicator"
        style="color: rgb(255, 255, 255); font-size: 52px; background-color: rgb(246, 126, 0); height: 200px;"
      >
        <span
          aria-label="fa-file-image-o"
          class="fa fa-file-image-o"
        />
      </div>
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with a checkbox for selection 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <label
            class="label"
            tabindex="-1"
          >
            <span
              class="switch checkbox dark checkbox"
            >
              <input
                type="checkbox"
                value="test"
              />
              <span />
            </span>
            <div>
              <div
                class="titleText"
              >
                <div
                  aria-label="Test"
                  class="croppedText"
                  title="Test"
                >
                  <div
                    aria-hidden="true"
                    class="front"
                  >
                    Te
                  </div>
                  <div
                    aria-hidden="true"
                    class="back"
                  >
                    <span>
                      st
                    </span>
                  </div>
                  <div
                    class="whole"
                  >
                    Test
                  </div>
                </div>
              </div>
            </div>
          </label>
        </div>
        <div
          class="meta"
        >
          <div
            aria-label="Test/Test"
            class="croppedText"
            title="Test/Test"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              Test/
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                Test
              </span>
            </div>
            <div
              class="whole"
            >
              Test/Test
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with ghostLocale 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <span
              class="ghostIndicator ghostIndicator"
            >
              en
            </span>
            <div
              aria-label="Test"
              class="croppedText"
              title="Test"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Te
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  st
                </span>
              </div>
              <div
                class="whole"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div
            aria-label="Test/Test"
            class="croppedText"
            title="Test/Test"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              Test/
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                Test
              </span>
            </div>
            <div
              class="whole"
            >
              Test/Test
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a MediaCard component with loader if image has not been loaded yet 1`] = `
<DocumentFragment>
  <div
    class="mediaCard noDownloadList"
  >
    <div
      class="header"
    >
      <div
        class="description"
        role="button"
        tabindex="0"
      >
        <div
          class="title"
        >
          <div
            class="titleText"
          >
            <div
              aria-label="Test"
              class="croppedText"
              title="Test"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Te
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  st
                </span>
              </div>
              <div
                class="whole"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          class="meta"
        >
          <div
            aria-label="Test/Test"
            class="croppedText"
            title="Test/Test"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              Test/
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                Test
              </span>
            </div>
            <div
              class="whole"
            >
              Test/Test
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="media"
      role="button"
      tabindex="0"
    >
      <img
        alt="Test"
        src="http://lorempixel.com/300/200"
      />
      <div
        class="spinner"
        style="width: 40px; height: 40px;"
      >
        <div
          class="doubleBounce1"
        />
        <div
          class="doubleBounce2"
        />
      </div>
      <div
        class="cover"
      />
    </div>
  </div>
</DocumentFragment>
`;
